[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-review-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.2.0",
    "anthropic>=0.25.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "PyGithub>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
review = "code_review_agent.main:main"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/code_review_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
